# AoC22

./: .gitignore  aoc22.cabal  flake.nix  hie.yaml
src/: Day1.hs  Day2.hs  Day2TypeLevel.hs  Day3.hs  Day6.hs  Day7.hs  Main.hs
