cabal-version:      2.4
name:               AoC22
version:            1.0.0
license:            MIT
copyright:          2022 Abhinav Sarkar
maintainer:         abhinav@abhinavsarkar.net
author:             Abhinav Sarkar
extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds -freduction-depth=0

  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
    RecordWildCards

  build-depends:
    , base   >=4.13.0.0 && <4.18.0.0.0
    , split
    , containers

  hs-source-dirs:     src
  default-language:   Haskell2010

executable day1
  import:  shared
  main-is: Day1.hs

executable day2
  import:  shared
  main-is: Day2.hs

executable day2-tl
  import:  shared
  main-is: Day2TypeLevel.hs

executable day3
  import:  shared
  main-is: Day3.hs

executable day6
  import:  shared
  main-is: Day6.hs

executable day7
  import:  shared
  main-is: Day7.hs
